# poetry-hy-plugin

src/poetry_hy_plugin/templates/: pyproject.toml
